# r2d2-diesel

./: Cargo.toml  LICENSE  README.md
examples/: postgres.rs  sqlite.rs
src/: lib.rs
tests/: test.rs
